syntax = "proto3";

option go_package = "common/post";

package post;

import "google/api/annotations.proto";

service PostService{
        rpc Get(GetRequest) returns(GetResponse) {
        	option (google.api.http) = {
			get: "/post/{id}"
		};
        }
        rpc GetAll(GetAllRequest) returns(GetAllResponse) {
        	option (google.api.http) = {
			get: "/post"
		};
        }
}

message GetRequest {
        string id = 1;
}

message GetResponse {
        Post post = 1;
}

message GetAllRequest {
}

message GetAllResponse {
        repeated Post posts = 1;
}

message Post {
        string id = 1;
        string name = 2;
}


